src/objects/ZipSearchInfo__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EndPointType__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>郵便番号から住所取得用エンドポイント種別タイプ
1.http://zip.cgis.biz
2.https://postcode.teraren.com
3.http://zipcloud.ibsnet.co.jp</inlineHelpText>
        <label>EndPointType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoAutoResetFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ResetDateの指定日から、郵便検索EndPointは[http://zip.cgis.biz]に戻るがどうかフラグ
TRUE:ResetDateの指定日から郵便検索EndPointは[http://zip.cgis.biz]に戻る
FALSE:ResetDateの指定日から郵便検索EndPointは[http://zip.cgis.biz]に戻らない</inlineHelpText>
        <label>NoAutoResetFlg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResetDate__c</fullName>
        <inlineHelpText>該当指定日からEndPointTypeが「1」にリセットする</inlineHelpText>
        <label>ResetDate</label>
        <type>Date</type>
    </fields>
    <label>郵便番号機能定義</label>
</CustomObject>